# remix-wasm

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
app/routes/: audio.tsx  breakout.tsx  game-of-life.tsx
app/utils/: loadWasm.ts
rust-wasm-lib/: Cargo.toml
rust-wasm-lib/src/: breakout.rs  lib.rs
